@@ -110,23 +110,28 @@ int write_cc_bitmap_as_srt(struct cc_subtitle *sub, struct encoder_ctx *context)
 	str = paraof_ocrtext(sub, context->encoded_crlf, context->encoded_crlf_length);
 	if (str)
 	{
-		if (context->prev_start != -1 || !(sub->flags & SUB_EOD_MARKER))
-		{
-			millis_to_time (ms_start,&h1,&m1,&s1,&ms1);
-			millis_to_time (ms_end-1,&h2,&m2,&s2,&ms2); // -1 To prevent overlapping with next line.
-			context->srt_counter++;
-			sprintf(timeline, "%u%s", context->srt_counter, context->encoded_crlf);
-			used = encode_line(context, context->buffer,(unsigned char *) timeline);
-			write(context->out->fh, context->buffer, used);
-			sprintf (timeline, "%02u:%02u:%02u,%03u --> %02u:%02u:%02u,%03u%s",
-				h1, m1, s1, ms1, h2, m2, s2, ms2, context->encoded_crlf);
-			used = encode_line(context, context->buffer,(unsigned char *) timeline);
-            write (context->out->fh, context->buffer, used);
-			len = strlen(str);
-            write (context->out->fh, str, len);
-			write (context->out->fh, context->encoded_crlf, context->encoded_crlf_length);
-		}
-		freep(&str);
+        if(context->is_mkv == 1) {
+            // Save recognized string for later use in matroska.c
+            context->last_string = str;
+        } else {
+            if (context->prev_start != -1 || !(sub->flags & SUB_EOD_MARKER))
+            {
+                millis_to_time (ms_start,&h1,&m1,&s1,&ms1);
+                millis_to_time (ms_end-1,&h2,&m2,&s2,&ms2); // -1 To prevent overlapping with next line.
+                context->srt_counter++;
+                sprintf(timeline, "%u%s", context->srt_counter, context->encoded_crlf);
+                used = encode_line(context, context->buffer,(unsigned char *) timeline);
+                write(context->out->fh, context->buffer, used);
+                sprintf (timeline, "%02u:%02u:%02u,%03u --> %02u:%02u:%02u,%03u%s",
+                         h1, m1, s1, ms1, h2, m2, s2, ms2, context->encoded_crlf);
+                used = encode_line(context, context->buffer,(unsigned char *) timeline);
+                write (context->out->fh, context->buffer, used);
+                len = strlen(str);
+                write (context->out->fh, str, len);
+                write (context->out->fh, context->encoded_crlf, context->encoded_crlf_length);
+            }
+            freep(&str);
+        }
 	}
 	for(i = 0, rect = sub->data; i < sub->nb_data; i++, rect++)
 	{
